Changes
=======

0.5.0 (2012-05-22)
------------------
- Support for additional attributes other than the ones that get mapped
  into the User model. Those attributes get stored in the UserProfile model.
- Do not automatically add the authentication backend. This way
  we allow other people to add their own backends.

0.4.2 (2012-03-23)
------------------
- Fix a crash in the idplist templatetag about using an old pysaml2 function
- Added a test for the previous crash

0.4.1 (2012-03-19)
------------------
- Upgrade pysaml2 dependency to version 0.4.1

0.4.0 (2012-03-18)
------------------
- Upgrade pysaml2 dependency to version 0.4.0 (update our tests as a result
  of this)
- Add logging calls to make debugging easier
- Use the Django configured logger in pysaml2

0.3.3 (2012-02-14)
------------------
- Freeze the version of pysaml2 since we are not (yet!) compatible with
  version 0.4.0

0.3.2 (2011-12-13)
------------------
- Avoid a crash when reading the SAML attribute that maps to the Django
  username

0.3.1 (2011-12-01)
------------------
- Load the config in the render method of the idplist templatetag to
  make it more flexible and reentrant.

0.3.0 (2011-11-30)
------------------
- Templatetag to get the list of available idps.
- Allow to map the same SAML attribute into several Django field.

0.2.4 (2011-11-29)
------------------
- Fix restructured text bugs that made pypi page looks bad.

0.2.3 (2011-06-14)
------------------
- Set a unusable password when the user is created for the first time

0.2.2 (2011-06-07)
------------------
- Prevent infinite loop when going to the /saml2/login/ endpoint and the user
  is already logged in and the settings.LOGIN_REDIRECT_URL is (badly) pointing
  to /saml2/login.

0.2.1 (2011-05-09)
------------------
- If no next parameter is supplied to the login view, use the
  settings.LOGIN_REDIRECT_URL as default

0.2.0 (2011-04-26)
------------------
- Python 2.4 compatible if the elementtree library is installed